Many QWYSIWYG-related improvements.  Tooltips now show the current value of model values and static fields.  Fixed more positioning issues